Add mouse mode to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,3 +10,7 @@ unbind-key -n C-k
 bind-key -n C-k select-pane -U
 unbind-key -n C-l
 bind-key -n C-l select-pane -R
+
+# Enable mouse mode
+setw -g mode-mouse on
+
