Add pane rotation shortcuts to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,10 @@ bind-key -n C-k select-pane -U
 unbind-key -n C-l
 bind-key -n C-l select-pane -R
 
+# Rotate views
+bind-key C-H swap-pane -U
+bind-key C-L swap-pane -D
+
 # Enable mouse mode
 setw -g mode-mouse on
 
