Switch to prefixed pane movement in tmux
Reduces collisions with vim shortcuts

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,18 +2,20 @@
 set -g default-terminal "screen-256color"
 
 # Remap keys to vim navigation
-unbind-key -n C-h
-bind-key -n C-h select-pane -L
-unbind-key -n C-j
-bind-key -n C-j select-pane -D
-unbind-key -n C-k
-bind-key -n C-k select-pane -U
-unbind-key -n C-l
-bind-key -n C-l select-pane -R
+unbind-key h
+bind-key h select-pane -L
+unbind-key j
+bind-key j select-pane -D
+unbind-key k
+bind-key k select-pane -U
+unbind-key l
+bind-key l select-pane -R
 
 # Rotate views
-bind-key C-H swap-pane -U
-bind-key C-L swap-pane -D
+unbind-key H
+bind-key H swap-pane -U
+unbind-key L
+bind-key L swap-pane -D
 
 # Enable mouse mode
 setw -g mode-mouse on
