Add purple color to tmux status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,10 @@
 # Tell tmux we have 256 colors
 set -g default-terminal "screen-256color"
 
+# Set some nice colors to status bar
+set -g status-bg colour134
+set -g status-fg white
+
 # Remap keys to vim navigation
 unbind-key h
 bind-key h select-pane -L
