Add mouse pane interaction to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,5 +22,8 @@ unbind-key L
 bind-key L swap-pane -D
 
 # Enable mouse mode
-setw -g mode-mouse on
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 
